--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <p>Automate calculations</p>
         </div>
         <div class="col-md-3">
-          <img src="C:\Users\user\OneDrive\Desktop\website project\kostika new project\githubkostika\icons8-share-64.png" alt="Export" />
+          <img src="\asset\icons8-share-64.png" alt="Export" />
           <p>Export or share instantly</p>
         </div>
       </div>
@@ -97,7 +97,7 @@
       <div class="row mt-4">
         <div class="col-md-4">
           <div class="card">
-            <img src="C:\Users\user\OneDrive\Desktop\website project\kostika new project\githubkostika\asset\cost estimation.jpeg" class="card-img-top" alt="Project Estimator">
+            <img src="C:\asset\cost estimation.jpeg" class="card-img-top" alt="Project Estimator">
             <div class="card-body">
               <span class="badge bg-secondary">Estimation</span>
               <h5 class="card-title mt-2">Project Estimator</h5>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="C:\Users\user\OneDrive\Desktop\website project\kostika new project\githubkostika\asset\gantt builder.jpg" class="card-img-top" alt="Gantt Builder">
+            <img src="\asset\gantt builder.jpg" class="card-img-top" alt="Gantt Builder">
             <div class="card-body">
               <span class="badge bg-secondary">Scheduling</span>
               <h5 class="card-title mt-2">Gantt Builder</h5>
@@ -117,7 +117,7 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="C:\Users\user\OneDrive\Desktop\website project\kostika new project\githubkostika\asset\invoice maker.jpg" class="card-img-top" alt="Invoice Logic">
+            <img src="\asset\invoice maker.jpg" class="card-img-top" alt="Invoice Logic">
             <div class="card-body">
               <span class="badge bg-secondary">Billing</span>
               <h5 class="card-title mt-2">Invoice Logic</h5>
