--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="container">
 
-      <img src="kostikaLogo.png" alt="logo" class="mb-4">
+      <img src="asset\kostikaLogo.png" alt="logo" class="mb-4">
 
       <h1 class="hero-title">Smarter Spreadsheets for Smarter Work</h1>
       <p class="lead">Live logic templates for project estimation, planning & more.</p>
