--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 
     <div class="container">
 
-      <img src="asset\kostikaLogo.png" alt="logo" class="mb-4">
+//////TESTING JAK////////
+      <div class="card"> 
+           <img src="asset\kostikaLogo.png" alt="logo" class="mb-4">
+      </div>
 
       <h1 class="hero-title">Smarter Spreadsheets for Smarter Work</h1>
       <p class="lead">Live logic templates for project estimation, planning & more.</p>
